Try fixing bug in Tor Browser where commandLine is visible

--- a/sass/command.scss
+++ b/sass/command.scss
@@ -76,3 +76,10 @@
     border-right: 0;
   }
 }
+
+html.noJS {
+  #commandLine,
+  #commandLineHints {
+    display: none!important;
+  }
+}
